create section why-choose-foxtar and section tutorials, add style for sections

--- a/app/index.html
+++ b/app/index.html
@@ -31,11 +31,52 @@
                 <!-- /.need-help -->
                 <div class="user-controls d-flex align-items-center">
                     <div class="dropdown-item">
-                        <div class="dropdown-control d-flex">
+                        <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="fas fa-shopping-cart mx-auto my-auto"></i>
                             <span class="notify-count bg-red">8</span>
                         </div>
                         <!-- /.dropdown-control -->
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-card-img">
+                                    <img src="img/notify-card-img.jpg" alt="">
+                                </div>
+                                <!-- /.notify-card-img -->
+                                <div class="notify-item-info">
+                                    <span class="notify-product">Grand Ballet</span>
+                                    <h6>WordPress</h6>
+                                    <span class="notify-price">$59</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-card-img">
+                                    <img src="img/notify-card-img.jpg" alt="">
+                                </div>
+                                <!-- /.notify-card-img -->
+                                <div class="notify-item-info">
+                                    <span class="notify-product">Apple Device</span>
+                                    <h6>WordPress</h6>
+                                    <span class="notify-price">$59</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <div class="dropdown-notify-total d-flex">
+                                <span>Total</span>
+                                <span class="ml-auto">$118</span>
+                            </div>
+                            <!-- /.dropdown-notify-total -->
+                            <div class="dropdown-btn-wrap">
+                                <a href="#" class="btn btn-to-card bg-green">Go To Card</a>
+                                <a href="#" class="btn btn-to-checkout bg-red">Go To Checkout</a>
+                            </div>
+                            <!-- /.dropdown-btn-wrap -->
+                        </div>
+                        <!-- dropdown-menu -->
                     </div>
                     <!-- /.dropdown-item -->
                     <button class="btn small-btn bg-green">Login</button>
@@ -93,12 +134,122 @@
             <!-- /.container-fluid -->
         </section>
         <!-- /.newest-products -->
+        <section class="trending-products default-section">
+            <div class="container-fluid">
+                <h2 class="title text-center">This Week Trending Products</h2>
+            </div>
+            <!-- /.container-fluid -->
+        </section>
+        <!-- /.trending-products -->
+        <section class="why-choose-foxtar default-section bg-dark-blue">
+            <div class="container">
+                <h2 class="title title-white text-center">Why You Choose Foxtar Market Place?</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="advantage-item d-flex flex-column align-items-center">
+                            <div class="advantage-img">
+                                <img src="img/advantage-img.png" alt="">
+                            </div>
+                            <!-- /.advantage-img -->
+                            <a href="" class="advantage-title">Easily Buy & Sell</a>
+                            <!-- /.advantage-title -->
+                            <p class="default-text text-center">Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</p>
+                        </div>
+                        <!-- /.advantage-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                    <div class="col-md-4">
+                        <div class="advantage-item d-flex flex-column align-items-center">
+                            <div class="advantage-img">
+                                <img src="img/advantage-img.png" alt="">
+                            </div>
+                            <!-- /.advantage-img -->
+                            <a href="" class="advantage-title">Quality Products</a>
+                            <!-- /.advantage-title -->
+                            <p class="default-text text-center">Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</p>
+                        </div>
+                        <!-- /.advantage-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                    <div class="col-md-4">
+                        <div class="advantage-item d-flex flex-column align-items-center">
+                            <div class="advantage-img">
+                                <img src="img/advantage-img.png" alt="">
+                            </div>
+                            <!-- /.advantage-img -->
+                            <a href="" class="advantage-title">100% Secure Payment</a>
+                            <!-- /.advantage-title -->
+                            <p class="default-text text-center">Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.</p>
+                        </div>
+                        <!-- /.advantage-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.why-choose-foxtar -->
+        <section class="become-a-author">
+            <div class="container">
+                
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.become-a-author -->
+        <section class="tutorials default-section bg-white">
+            <div class="container">
+                <h2 class="title text-center">Free Monthly Tutorials To Help You With Your Project</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="tutorials-item bg-light-grey text-center">
+                            <div class="tutorials-img">
+                                <img src="img/tutorials-img.jpg" alt="">
+                            </div>
+                            <!-- /.tutorials-img -->
+                            <a href="" class="tutorials-name">Web Design Tutorials</a>
+                            <!-- /.tutorials-name -->
+                        </div>
+                        <!-- /.tutorials-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                    <div class="col-md-4">
+                        <div class="tutorials-item bg-light-grey text-center">
+                            <div class="tutorials-img">
+                                <img src="img/tutorials-img.jpg" alt="">
+                            </div>
+                            <!-- /.tutorials-img -->
+                            <a href="" class="tutorials-name">WordPress Tutorials</a>
+                            <!-- /.tutorials-name -->
+                        </div>
+                        <!-- /.tutorials-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                    <div class="col-md-4">
+                        <div class="tutorials-item bg-light-grey text-center">
+                            <div class="tutorials-img">
+                                <img src="img/tutorials-img.jpg" alt="">
+                            </div>
+                            <!-- /.tutorials-img -->
+                            <a href="" class="tutorials-name">HTML & CSS Tutorials</a>
+                            <!-- /.tutorials-name -->
+                        </div>
+                        <!-- /.tutorials-item -->
+                    </div>
+                    <!-- /.col-md-4 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.tutorials -->
     </main>
     <!-- /#main -->
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
     <script src="js/bootstrap.min.js"></script>
 </body>
