--- a/app/product-details.html
+++ b/app/product-details.html
@@ -301,14 +301,14 @@
                             </div>
                             <!-- /.product-description -->
                             <div class="product-links d-flex">
-                                <a href="#" class="btn product-btn bg-red">Live Preview</a>
-                                <a href="#" class="btn product-btn bg-marengo">Screenshots</a>
-                                <a href="#" class="btn product-btn bg-green">Documentation</a>
+                                <a href="#" class="btn large-btn bg-red">Live Preview</a>
+                                <a href="#" class="btn large-btn bg-marengo">Screenshots</a>
+                                <a href="#" class="btn large-btn bg-green">Documentation</a>
                                 <nav class="product-social ml-auto">
-                                    <a href="#"></a>
-                                    <a href="#"></a>
-                                    <a href="#"></a>
-                                    <a href="#"></a>
+                                    <a href="#" class="bg-violet"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#" class="bg-ligth-blue"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="bg-blue"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="#" class="bg-crimson"><i class="fab fa-pinterest-p"></i></a>
                                 </nav>
                                 <!-- /.product-social -->
                             </div>
@@ -319,8 +319,11 @@
                     <!-- /.col-md-9 -->
                     <div class="col-md-3">
                         <aside id="aside">
-                            <div class="aside-section bg-white border-grey">
+                            <div class="aside-section product-price-section bg-white border-grey">
                                 <h3 class="aside-title">Product Price</h3>
+                                <a href="#" class="btn large-btn bg-green"><i class="fas fa-shopping-cart"></i>Add to Card</a>
+                                <a href="#" class="btn large-btn bg-steel-blue"><i class="far fa-heart"></i>Add to Favourites</a>
+                                <a href="#" class="btn large-btn bg-marengo">Buy Now</a>
                             </div>
                             <!-- /.aside-section -->
                             <div class="aside-section bg-white border-grey">
