--- a/app/product-details.html
+++ b/app/product-details.html
@@ -313,6 +313,187 @@
                                 <!-- /.product-social -->
                             </div>
                             <!-- /.product-links -->
+                            <div class="product-tabs bg-white border-grey">
+                                <ul class="nav nav-tabs d-flex" id="myTab" role="tablist">
+                                    <li class="nav-item">
+                                      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#features" role="tab" aria-controls="home" aria-selected="true">Item Features</a>
+                                    </li>
+                                    <li class="nav-item">
+                                      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="profile" aria-selected="false">Comments</a>
+                                    </li>
+                                    <li class="nav-item">
+                                      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="contact" aria-selected="false">Reviews</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#support" role="tab" aria-controls="contact" aria-selected="false">Support</a>
+                                    </li>
+                                </ul>
+                                <!-- /.nav-tabs -->
+                                <div class="tab-content" id="myTabContent">
+                                    <div class="tab-pane fade show active" id="features" role="tabpanel" aria-labelledby="home-tab">
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Desktop publishing software</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                    </div>
+                                    <!-- /.tab-pane -->
+                                    <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="profile-tab">
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Desktop publishing software</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                    </div>
+                                    <!-- /.tab-pane -->
+                                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="contact-tab">
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Desktop publishing software</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                    </div>
+                                    <!-- /.tab-pane -->
+                                    <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="home-tab">
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Desktop publishing software</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                        <ul class="default-chevron-list">
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Printing and typesetting industry</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Handard dummy text</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Desktop publishing software</span>
+                                            </li>
+                                            <li>
+                                                <i class="fas fa-chevron-right"></i>
+                                                <span>Bhen an unknown printe</span>
+                                            </li>
+                                        </ul>
+                                        <!-- /.default-chevron-list -->
+                                    </div>
+                                    <!-- /.tab-pane -->
+                                </div>
+                                <!-- ./tab-content -->
+                            </div>
+                            <!-- /.product-tabs -->
                         </div>
                         <!-- /.product-info-wrap -->
                     </div>
