create card for product details

--- a/app/product-details.html
+++ b/app/product-details.html
@@ -494,6 +494,139 @@
                                 <!-- ./tab-content -->
                             </div>
                             <!-- /.product-tabs -->
+                            <div class="more-product bg-white border-grey">
+                                <span>More Product by PsdBosS</span>
+                            </div>
+                            <!-- /.more-product -->
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-lg-4">
+                                    <div class="card bg-white d-flex">
+                                        <div class="card-img">
+                                            <a href="#">
+                                                <img src="img/product-card-item-img.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- /.card-img -->
+                                        <div class="card-description">
+                                            <div class="card-item-info">
+                                                <a href="#" class="card-title">Grand Ballet - Dance</a>
+                                                <span class="card-category">PSD Template</span>
+                                            </div>
+                                            <!-- /.card-item-info -->
+                                            <span class="card-price">$12</span>
+                                        </div>
+                                        <!-- /.card-description -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col-lg-4 -->
+                            </div>
+                            <!-- /.row -->
                         </div>
                         <!-- /.product-info-wrap -->
                     </div>
