--- a/app/product-details.html
+++ b/app/product-details.html
@@ -316,21 +316,21 @@
                             <div class="product-tabs bg-white border-grey">
                                 <ul class="nav nav-tabs d-flex" id="myTab" role="tablist">
                                     <li class="nav-item">
-                                      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#features" role="tab" aria-controls="home" aria-selected="true">Item Features</a>
+                                      <a class="nav-link active" id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="features" aria-selected="true">Item Features</a>
                                     </li>
                                     <li class="nav-item">
-                                      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="profile" aria-selected="false">Comments</a>
+                                      <a class="nav-link" id="comments-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="comments" aria-selected="false">Comments</a>
                                     </li>
                                     <li class="nav-item">
-                                      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="contact" aria-selected="false">Reviews</a>
+                                      <a class="nav-link" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews" aria-selected="false">Reviews</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#support" role="tab" aria-controls="contact" aria-selected="false">Support</a>
+                                        <a class="nav-link" id="support-tab" data-toggle="tab" href="#support" role="tab" aria-controls="support" aria-selected="false">Support</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-tabs -->
                                 <div class="tab-content" id="myTabContent">
-                                    <div class="tab-pane fade show active" id="features" role="tabpanel" aria-labelledby="home-tab">
+                                    <div class="tab-pane fade show active" id="features" role="tabpanel" aria-labelledby="features-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -371,7 +371,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="profile-tab">
+                                    <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="comments-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -408,7 +408,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="contact-tab">
+                                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -441,7 +441,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="home-tab">
+                                    <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="support-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -604,7 +604,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                                                <div class="col-lg-4">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
